[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/StartScn.gd" type="Script" id=1]
[ext_resource path="res://assets/modern_dress_up_blurred_bg.png" type="Texture" id=2]
[ext_resource path="res://assets/dressup_blurred_wardrobe.png" type="Texture" id=3]
[ext_resource path="res://assets/classic_dress_up_blurred_bg.png" type="Texture" id=4]
[ext_resource path="res://assets/dressup_title.svg" type="Texture" id=5]
[ext_resource path="res://WinDialogs.tscn" type="PackedScene" id=6]

[node name="Start" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Modern" type="Node2D" parent="." index="0"]

[node name="ModernBG" type="Sprite" parent="Modern" index="0"]

position = Vector2( 400, 277 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="WordrobeBG" type="Sprite" parent="Modern" index="1"]

position = Vector2( 492.609, 280.27 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ClassicBG" type="Sprite" parent="." index="1"]

visible = false
position = Vector2( 400, 277 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="GameTitle" type="Sprite" parent="." index="2"]

position = Vector2( 489.565, 100.74 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="MenuRf" type="ReferenceRect" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 221.0
margin_top = 147.0
margin_right = 762.0
margin_bottom = 462.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="StartVbox" type="VBoxContainer" parent="MenuRf" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_top = 14.0
margin_right = 150.0
margin_bottom = 99.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="PlayBtn" type="Button" parent="MenuRf/StartVbox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 136.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "KPLY"
flat = false
align = 1

[node name="CreditsBtn" type="Button" parent="MenuRf/StartVbox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 136.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "KCRE"
flat = false
align = 1

[node name="LicenseBtn" type="Button" parent="MenuRf/StartVbox" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 136.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "KLIC"
flat = false
align = 1

[node name="ModePanel" type="Panel" parent="MenuRf" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 168.0
margin_top = 14.0
margin_right = 314.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="PlayVbox" type="VBoxContainer" parent="MenuRf/ModePanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ModeLbl" type="Label" parent="MenuRf/ModePanel/PlayVbox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 136.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "KGMO"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="ModernBtn" type="Button" parent="MenuRf/ModePanel/PlayVbox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 136.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Modern"
flat = false
align = 1
_sections_unfolded = [ "Pause" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ClassicBtn" type="Button" parent="MenuRf/ModePanel/PlayVbox" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 42.0
margin_right = 136.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "KCLS"
flat = false
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="WinDialogs" parent="." index="4" instance=ExtResource( 6 )]

[connection signal="toggled" from="MenuRf/StartVbox/PlayBtn" to="." method="_on_PlayBtn_toggled"]

[connection signal="pressed" from="MenuRf/StartVbox/CreditsBtn" to="." method="_on_CreditsBtn_pressed"]

[connection signal="pressed" from="MenuRf/StartVbox/LicenseBtn" to="." method="_on_LicenseBtn_pressed"]

[connection signal="pressed" from="MenuRf/ModePanel/PlayVbox/ModernBtn" to="." method="_on_ModernBtn_pressed"]

[connection signal="mouse_entered" from="MenuRf/ModePanel/PlayVbox/ClassicBtn" to="." method="_on_ClassicBtn_mouse_entered"]

[connection signal="mouse_exited" from="MenuRf/ModePanel/PlayVbox/ClassicBtn" to="." method="_on_ClassicBtn_mouse_exited"]

[connection signal="pressed" from="MenuRf/ModePanel/PlayVbox/ClassicBtn" to="." method="_on_ClassicBtn_pressed"]


